# aoc2015

./: pyproject.toml
day01/: 01.py
day02/: 02.py
day03/: 03.py
day04/: 04.py
day05/: 05.py
day06/: 06.py
day07/: 07.py  07b.py
day08/: 08.py
day09/: 01.py
day10/: 01.py
day11/: 01.py
day12/: 01.py
day13/: 01.py
day14/: 01.py
day15/: 01.py
day16/: 01.py
day17/: 01.py
day18/: 01.py
day19/: 01.py
day20/: 01.py
day21/: 01.py
day22/: 01.py
day23/: 01.py
day24/: 01.py
day25/: 01.py
